@@ -229,7 +229,14 @@ void test04(void)
   VERIFY( pos05 == pos06 + off_type(10) );
   VERIFY( state01 == state02 );
   pos06 = is03.tellg(); 
-  VERIFY( pos05 == pos06 ); 
+  VERIFY( pos05 == pos06 );
+
+  // libstdc++/6414
+  if01.seekg(0, std::ios_base::beg);
+  pos01 = if01.tellg();
+  if01.peek();
+  pos02 = if01.tellg();
+  VERIFY( pos02 == pos01 );
 
 #ifdef DEBUG_ASSERT
   assert(test);
